--- a/Ahmad's Portfolio/Ahmad-portfolio-main/index.html
+++ b/Ahmad's Portfolio/Ahmad-portfolio-main/index.html
@@ -21,12 +21,12 @@
     </header>
 
     <!-- Profile Image Section -->
-    <img src="ProfileImage.jpg" class="rounded mx-auto d-block animate__animated animate__fadeInDown" style="width: 85%; margin-top: 50px;">
+    <img src="img_2_1756497306022.jpg" class="rounded mx-auto d-block animate__animated animate__fadeInDown" style="width: 85%; margin-top: 50px;">
 
 
     <!-- Title Section -->
     <div class="title text-center animate__animated animate__fadeInDown">
-        <h1 style="color: #FCA311;">Ahmad Muhammad</h1>
+        <h1 style="color: #FCA311;">Ahmad Mohammed</h1>
         <p class="text-white animate__animated animate__fadeIn" id="underH1">(Nursing Student)</p>
     </div>
 
