--- a/Ahmad's Portfolio/Ahmad-portfolio-main/kurdish.html
+++ b/Ahmad's Portfolio/Ahmad-portfolio-main/kurdish.html
@@ -26,7 +26,7 @@
     </header>
 
     <!-- Profile Image Section -->
-    <img src="ProfileImage.jpg" class="rounded mx-auto d-block animate__animated animate__fadeInDown" style="width: 85%; margin-top: 50px;">
+    <img src="img_2_1756497306022.jpg" class="rounded mx-auto d-block animate__animated animate__fadeInDown" style="width: 85%; margin-top: 50px;">
 
     <!-- Title Section -->
     <div class="title text-center">
